<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="MSG" Id="{f7b8f56a-8bb9-4a72-96f7-d8484bd365f7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	EVENT_BTN			: STRING := '[BTN] ';
	EVENT_PAGE			: STRING := '[PAGE] ';
	EVENT_PROCESS		: STRING := '[PROCESS] ';
	
	COMP_A5				: STRING := '|A5| ';
	COMP_A4				: STRING := '|A4| ';
	COMP_A3				: STRING := '|A3| ';
	COMP_A2				: STRING := '|A2| ';
	COMP_A1				: STRING := '|A1| ';
	COMP_B5				: STRING := '|B5| ';
	COMP_B4				: STRING := '|B4| ';
	COMP_B3				: STRING := '|B3| ';
	COMP_B2				: STRING := '|B2| ';
	COMP_B1				: STRING := '|B1| ';
	COMP_TT				: STRING := '|T.T| ';
	COMP_IR				: STRING := '|I.R| ';
	COMP_CR				: STRING := '|C.R| ';
	COMP_CM				: STRING := '|C.M| ';
	COMP_RW				: STRING := '|R.W| ';
	COMP_FG				: STRING := '|F.G| ';
	COMP_KR1			: STRING := '|KR1| ';
	COMP_KR2			: STRING := '|KR2| ';
	COMP_KR3			: STRING := '|KR3| ';
	COMP_KR4			: STRING := '|KR4| ';
	COMP_KR5			: STRING := '|KR5| ';
	COMP_JIGA			: STRING := '|JigA| ';
	COMP_JIGB			: STRING := '|JigB| ';
	COMP_JIGC			: STRING := '|JigC| ';
	COMP_HMI			: STRING := '|HMI| ';
	COMP_OP_BTN			: STRING := '|OP_BTN| ';
	
// STATUS MSG ---------------------------------------------------------		
	STATUS_RUN			: STRING := ' (RUN)';
	STATUS_ACK			: STRING := ' (ACK)';
	STATUS_DONE			: STRING := ' (DONE)';
	STATUS_COMP			: STRING := ' (COMPLETE)';
	STATUS_ERROR		: STRING := ' (ERROR)';
	STATUS_END			: STRING := ' (END)';

// ACTION MSG ---------------------------------------------------------	
	ACTION_ESTOP			: STRING := 'Emergency Stop';
	ACTION_START			: STRING := 'Start Production';
	ACTION_STOP		  		: STRING := 'Stop Production';
	ACTION_RESET			: STRING := 'Reset Production';
	ACTION_CLEAR_ERROR		: STRING := 'Clear Error';
	
	ACTION_RESET_KUKA		: STRING := 'Reset Kuka';
	ACTION_NEXTSTEP			: STRING := 'Next Step';
	ACTION_LOGIN			: STRING := 'User Login';
	ACTION_LOGOUT			: STRING := 'User Logout';
	ACTION_BSKTA_PLUS		: STRING := 'Basket A +';
	ACTION_BSKTA_MINUS		: STRING := 'Basket A -';
	ACTION_BSKTB_PLUS		: STRING := 'Basket B +';
	ACTION_BSKTB_MINUS		: STRING := 'Basket B -';
	ACTION_BACK				: STRING := 'Back';
	ACTION_KR1				: STRING := 'KR1';
	ACTION_KR2				: STRING := 'KR2';
	ACTION_KR3				: STRING := 'KR3';
	ACTION_KR4				: STRING := 'KR4';
	ACTION_KR5				: STRING := 'KR5';
	ACTION_COSMO			: STRING := 'Cosmo';
	ACTION_COSMO_PLACE		: STRING := 'Cosmo Place';
	ACTION_COOLRACK			: STRING := 'Cooling Rack';
	ACTION_INFEEDRACK		: STRING := 'Infeed Rack';
	ACTION_INFEEDRACK_PICK 	: STRING := 'Infeed Rack Pick';
	ACTION_TT				: STRING := 'TwinTorch';
	ACTION_JIGA				: STRING := 'Jig A';
	ACTION_JIGB				: STRING := 'Jig B';
	ACTION_JIGC				: STRING := 'Jig C';
	ACTION_TORCHCLEAN		: STRING := 'Torch Clean' ;
	ACTION_EOAT_YES			: STRING := 'Magnet Flag On';
	ACTION_EOAT_NO			: STRING := 'Magnet Flag Off';
	ACTION_SET_TIME			: STRING := 'Set Cooling Time';
	
	ACTION_MOVE_ENABLE		: STRING := 'Move Enable';
	ACTION_DRIVE_OFF		: STRING := 'Drive Off';
	ACTION_IO_ACT			: STRING := 'IO Act';
	ACTION_EXT_START		: STRING := 'Ext Start';
	ACTION_CONF_MESS		: STRING := 'Conf Mess';
	ACTION_DRIVE_ON			: STRING := 'Drive On';
	ACTION_PGNO_FBIT		: STRING := 'PGNO Fbit';
	ACTION_PGNO_VALID		: STRING := 'PGNO Valid';
	ACTION_PGNO_PARITY		: STRING := 'PGNO Parity';
	ACTION_1032				: STRING := '1032';
	ACTION_1036				: STRING := '1036';
	ACTION_1037				: STRING := '1037';
	ACTION_1038				: STRING := '1038';
	ACTION_1039				: STRING := '1039';
	ACTION_1040				: STRING := '1040';
	ACTION_1041				: STRING := '1041';
	ACTION_1042				: STRING := '1042';
	
	ACTION_200				: STRING := '200';
	ACTION_201				: STRING := '201';
	ACTION_202				: STRING := '202';
	ACTION_203				: STRING := '203';
	ACTION_204				: STRING := '204';
	ACTION_205				: STRING := '205';
	ACTION_206				: STRING := '206';
	ACTION_207				: STRING := '207';
	ACTION_208				: STRING := '208';
	ACTION_209				: STRING := '209';
	ACTION_210				: STRING := '210';
	ACTION_211				: STRING := '211';
	ACTION_212				: STRING := '212';
	ACTION_213				: STRING := '213';
	ACTION_214				: STRING := '214';
	ACTION_215				: STRING := '215';
	ACTION_216				: STRING := '216';
	ACTION_217				: STRING := '217';
	ACTION_218				: STRING := '218';
	ACTION_219				: STRING := '219';
	ACTION_220				: STRING := '220';
	ACTION_221				: STRING := '221';
	ACTION_222				: STRING := '222';
	ACTION_223				: STRING := '223';
	ACTION_224				: STRING := '224';
	ACTION_225				: STRING := '225';
	ACTION_226				: STRING := '226';
	ACTION_227				: STRING := '227';
	ACTION_228				: STRING := '228';
	ACTION_229				: STRING := '229';
	ACTION_230				: STRING := '230';
	ACTION_231				: STRING := '231';
	ACTION_300				: STRING := '300';
	ACTION_301				: STRING := '301';
	ACTION_302				: STRING := '302';
	ACTION_303				: STRING := '303';
	ACTION_304				: STRING := '304';
	ACTION_305				: STRING := '305';
	ACTION_306				: STRING := '306';
	ACTION_307				: STRING := '307';
	
	ACTION_GET_MAGNET		: STRING := 'Get Magnet';
	ACTION_REMOVE_MAGNET	: STRING := 'Remove Magnet';
	ACTION_GET_SUCTION		: STRING := 'Get Suction';
	ACTION_REMOVE_SUCTION	: STRING := 'Remove Suction';
	ACTION_GO_HOME			: STRING := 'Go Home';
	ACTION_COSMO_TO_PITSTOP	: STRING := 'Cosmo to Pitstop';
	ACTION_COSMO_TO_CNVYR	: STRING := 'Cosmo to Conveyor';
	ACTION_COSMO_PASS		: STRING := 'Cosmo Pass';
	ACTION_COSMO_FAIL		: STRING := 'Cosmo Fail';
	ACTION_REWORK_IN		: STRING := 'Rework In';
	ACTION_GET_LAYER_PAD	: STRING := 'Get Layer Pad';
	ACTION_PLACE_LAYER_PAD	: STRING := 'Place Layer Pad';
	ACTION_FGA_POS1			: STRING := 'FG Basket A POS 1';
	ACTION_FGA_POS2			: STRING := 'FG Basket A POS 2';
	ACTION_FGA_POS3			: STRING := 'FG Basket A POS 3';
	ACTION_FGA_POS4			: STRING := 'FG Basket A POS 4';
	ACTION_FGA_POS5			: STRING := 'FG Basket A POS 5';
	ACTION_FGA_POS6			: STRING := 'FG Basket A POS 6';
	ACTION_FGA_POS7			: STRING := 'FG Basket A POS 7';
	ACTION_FGA_POS8			: STRING := 'FG Basket A POS 8';
	ACTION_FGA_POS9			: STRING := 'FG Basket A POS 9';
	ACTION_FGA_POS10		: STRING := 'FG Basket A POS 10';
	ACTION_FGA_POS11		: STRING := 'FG Basket A POS 11';
	ACTION_FGA_POS12		: STRING := 'FG Basket A POS 12';
	ACTION_FGA_POS13		: STRING := 'FG Basket A POS 13';
	ACTION_FGA_POS14		: STRING := 'FG Basket A POS 14';
	ACTION_FGA_POS15		: STRING := 'FG Basket A POS 15';
	ACTION_FGA_POS16		: STRING := 'FG Basket A POS 16';
	ACTION_FGA_POS17		: STRING := 'FG Basket A POS 17';
	ACTION_FGA_POS18		: STRING := 'FG Basket A POS 18';
	ACTION_FGA_POS19		: STRING := 'FG Basket A POS 19';
	ACTION_FGA_POS20		: STRING := 'FG Basket A POS 20';
	ACTION_FGA_POS21		: STRING := 'FG Basket A POS 21';
	ACTION_FGA_POS22		: STRING := 'FG Basket A POS 22';
	ACTION_FGA_POS23		: STRING := 'FG Basket A POS 23';
	ACTION_FGA_POS24		: STRING := 'FG Basket A POS 24';
	ACTION_FGA_POS25		: STRING := 'FG Basket A POS 25';
	ACTION_FGA_POS26		: STRING := 'FG Basket A POS 26';
	ACTION_FGA_POS27		: STRING := 'FG Basket A POS 27';
	ACTION_FGA_POS28		: STRING := 'FG Basket A POS 28';
	ACTION_FGA_POS29		: STRING := 'FG Basket A POS 29';
	ACTION_FGA_POS30		: STRING := 'FG Basket A POS 30';
	ACTION_FGA_POS31		: STRING := 'FG Basket A POS 31';
	ACTION_FGA_POS32		: STRING := 'FG Basket A POS 32';
	ACTION_FGA_POS33		: STRING := 'FG Basket A POS 33';
	ACTION_FGA_POS34		: STRING := 'FG Basket A POS 34';
	ACTION_FGA_POS35		: STRING := 'FG Basket A POS 35';
	ACTION_FGA_POS36		: STRING := 'FG Basket A POS 36';
	ACTION_FGA_POS37		: STRING := 'FG Basket A POS 37';
	ACTION_FGA_POS38		: STRING := 'FG Basket A POS 38';
	ACTION_FGA_POS39		: STRING := 'FG Basket A POS 39';
	ACTION_FGA_POS40		: STRING := 'FG Basket A POS 40';
	ACTION_FGA_POS41		: STRING := 'FG Basket A POS 41';
	ACTION_FGA_POS42		: STRING := 'FG Basket A POS 42';
	ACTION_FGA_POS43		: STRING := 'FG Basket A POS 43';
	ACTION_FGA_POS44		: STRING := 'FG Basket A POS 44';
	ACTION_FGA_POS45		: STRING := 'FG Basket A POS 45';
	ACTION_FGA_POS46		: STRING := 'FG Basket A POS 46';
	ACTION_FGA_POS47		: STRING := 'FG Basket A POS 47';
	ACTION_FGA_POS48		: STRING := 'FG Basket A POS 48';
	ACTION_FGA_POS49		: STRING := 'FG Basket A POS 49';
	ACTION_FGA_POS50		: STRING := 'FG Basket A POS 50';
	ACTION_FGA_POS51		: STRING := 'FG Basket A POS 51';
	ACTION_FGA_POS52		: STRING := 'FG Basket A POS 52';
	ACTION_FGA_POS53		: STRING := 'FG Basket A POS 53';
	ACTION_FGA_POS54		: STRING := 'FG Basket A POS 54';
	ACTION_FGA_POS55		: STRING := 'FG Basket A POS 55';
	ACTION_FGA_POS56		: STRING := 'FG Basket A POS 56';
	ACTION_FGA_POS57		: STRING := 'FG Basket A POS 57';
	ACTION_FGA_POS58		: STRING := 'FG Basket A POS 58';
	ACTION_FGA_POS59		: STRING := 'FG Basket A POS 59';
	ACTION_FGA_POS60		: STRING := 'FG Basket A POS 60';
	ACTION_FGA_POS61		: STRING := 'FG Basket A POS 61';
	ACTION_FGA_POS62		: STRING := 'FG Basket A POS 62';
	ACTION_FGA_POS63		: STRING := 'FG Basket A POS 63';
	ACTION_FGA_POS64		: STRING := 'FG Basket A POS 64';
	ACTION_FGA_POS65		: STRING := 'FG Basket A POS 65';
	ACTION_FGA_POS66		: STRING := 'FG Basket A POS 66';
	ACTION_FGA_POS67		: STRING := 'FG Basket A POS 67';
	ACTION_FGA_POS68		: STRING := 'FG Basket A POS 68';
	ACTION_FGA_POS69		: STRING := 'FG Basket A POS 69';
	ACTION_FGA_POS70		: STRING := 'FG Basket A POS 70';
	ACTION_FGA_POS71		: STRING := 'FG Basket A POS 71';
	ACTION_FGA_POS72		: STRING := 'FG Basket A POS 72';
	ACTION_FGA_POS73		: STRING := 'FG Basket A POS 73';
	ACTION_FGA_POS74		: STRING := 'FG Basket A POS 74';
	ACTION_FGA_POS75		: STRING := 'FG Basket A POS 75';
	ACTION_FGA_POS76		: STRING := 'FG Basket A POS 76';
	ACTION_FGA_POS77		: STRING := 'FG Basket A POS 77';
	ACTION_FGA_POS78		: STRING := 'FG Basket A POS 78';
	ACTION_FGA_POS79		: STRING := 'FG Basket A POS 79';
	ACTION_FGA_POS80		: STRING := 'FG Basket A POS 80';
	ACTION_FGA_POS81		: STRING := 'FG Basket A POS 81';
	ACTION_FGA_POS82		: STRING := 'FG Basket A POS 82';
	ACTION_FGA_POS83		: STRING := 'FG Basket A POS 83';
	ACTION_FGA_POS84		: STRING := 'FG Basket A POS 84';
	ACTION_FGA_POS85		: STRING := 'FG Basket A POS 85';
	ACTION_FGA_POS86		: STRING := 'FG Basket A POS 86';
	ACTION_FGA_POS87		: STRING := 'FG Basket A POS 87';
	ACTION_FGA_POS88		: STRING := 'FG Basket A POS 88';
	ACTION_FGA_POS89		: STRING := 'FG Basket A POS 89';
	ACTION_FGA_POS90		: STRING := 'FG Basket A POS 90';
	ACTION_FGA_POS91		: STRING := 'FG Basket A POS 91';
	ACTION_FGA_POS92		: STRING := 'FG Basket A POS 92';
	ACTION_FGA_POS93		: STRING := 'FG Basket A POS 93';
	ACTION_FGA_POS94		: STRING := 'FG Basket A POS 94';
	ACTION_FGA_POS95		: STRING := 'FG Basket A POS 95';
	ACTION_FGA_POS96		: STRING := 'FG Basket A POS 96';
	ACTION_FGA_POS97		: STRING := 'FG Basket A POS 97';
	ACTION_FGA_POS98		: STRING := 'FG Basket A POS 98';
	ACTION_FGA_POS99		: STRING := 'FG Basket A POS 99';
	ACTION_FGA_POS100		: STRING := 'FG Basket A POS 100';
	ACTION_FGA_POS101		: STRING := 'FG Basket A POS 101';
	ACTION_FGA_POS102		: STRING := 'FG Basket A POS 102';
	ACTION_FGA_POS103		: STRING := 'FG Basket A POS 103';
	ACTION_FGA_POS104		: STRING := 'FG Basket A POS 104';
	ACTION_FGA_POS105		: STRING := 'FG Basket A POS 105';
	ACTION_FGA_POS106		: STRING := 'FG Basket A POS 106';
	ACTION_FGA_POS107		: STRING := 'FG Basket A POS 107';
	ACTION_FGA_POS108		: STRING := 'FG Basket A POS 108';
	ACTION_FGA_POS109		: STRING := 'FG Basket A POS 109';
	ACTION_FGA_POS110		: STRING := 'FG Basket A POS 110';
	ACTION_FGA_POS111		: STRING := 'FG Basket A POS 111';
	ACTION_FGA_POS112		: STRING := 'FG Basket A POS 112';
	ACTION_FGA_POS113		: STRING := 'FG Basket A POS 113';
	ACTION_FGA_POS114		: STRING := 'FG Basket A POS 114';
	ACTION_FGA_POS115		: STRING := 'FG Basket A POS 115';
	ACTION_FGA_POS116		: STRING := 'FG Basket A POS 116';
	ACTION_FGA_POS117		: STRING := 'FG Basket A POS 117';
	ACTION_FGA_POS118		: STRING := 'FG Basket A POS 118';
	ACTION_FGA_POS119		: STRING := 'FG Basket A POS 119';
	ACTION_FGA_POS120		: STRING := 'FG Basket A POS 120';
	ACTION_FGA_POS121		: STRING := 'FG Basket A POS 121';
	ACTION_FGA_POS122		: STRING := 'FG Basket A POS 122';
	ACTION_FGA_POS123		: STRING := 'FG Basket A POS 123';
	ACTION_FGA_POS124		: STRING := 'FG Basket A POS 124';
	ACTION_FGA_POS125		: STRING := 'FG Basket A POS 125';
	ACTION_FGA_POS126		: STRING := 'FG Basket A POS 126';
	ACTION_FGA_POS127		: STRING := 'FG Basket A POS 127';
	ACTION_FGA_POS128		: STRING := 'FG Basket A POS 128';
	ACTION_FGA_POS129		: STRING := 'FG Basket A POS 129';
	ACTION_FGA_POS130		: STRING := 'FG Basket A POS 130';
	ACTION_FGA_POS131		: STRING := 'FG Basket A POS 131';
	ACTION_FGA_POS132		: STRING := 'FG Basket A POS 132';
	ACTION_FGA_POS133		: STRING := 'FG Basket A POS 133';
	ACTION_FGA_POS134		: STRING := 'FG Basket A POS 134';
	ACTION_FGA_POS135		: STRING := 'FG Basket A POS 135';
	ACTION_FGA_POS136		: STRING := 'FG Basket A POS 136';
	ACTION_FGA_POS137		: STRING := 'FG Basket A POS 137';
	ACTION_FGA_POS138		: STRING := 'FG Basket A POS 138';
	ACTION_FGA_POS139		: STRING := 'FG Basket A POS 139';
	ACTION_FGA_POS140		: STRING := 'FG Basket A POS 140';
	ACTION_FGA_POS141		: STRING := 'FG Basket A POS 141';
	ACTION_FGA_POS142		: STRING := 'FG Basket A POS 142';
	ACTION_FGA_POS143		: STRING := 'FG Basket A POS 143';
	ACTION_FGA_POS144		: STRING := 'FG Basket A POS 144';
	ACTION_FGA_POS145		: STRING := 'FG Basket A POS 145';
	ACTION_FGA_POS146		: STRING := 'FG Basket A POS 146';
	ACTION_FGA_POS147		: STRING := 'FG Basket A POS 147';
	ACTION_FGA_POS148		: STRING := 'FG Basket A POS 148';
	ACTION_FGA_POS149		: STRING := 'FG Basket A POS 149';
	ACTION_FGA_POS150		: STRING := 'FG Basket A POS 150';
	ACTION_FGA_POS151		: STRING := 'FG Basket A POS 151';
	ACTION_FGA_POS152		: STRING := 'FG Basket A POS 152';
	ACTION_FGA_POS153		: STRING := 'FG Basket A POS 153';
	ACTION_FGA_POS154		: STRING := 'FG Basket A POS 154';
	ACTION_FGA_POS155		: STRING := 'FG Basket A POS 155';
	ACTION_FGA_POS156		: STRING := 'FG Basket A POS 156';
	ACTION_FGA_POS157		: STRING := 'FG Basket A POS 157';
	ACTION_FGA_POS158		: STRING := 'FG Basket A POS 158';
	ACTION_FGA_POS159		: STRING := 'FG Basket A POS 159';
	ACTION_FGA_POS160		: STRING := 'FG Basket A POS 160';
	ACTION_FGA_POS161		: STRING := 'FG Basket A POS 161';
	ACTION_FGA_POS162		: STRING := 'FG Basket A POS 162';
	ACTION_FGA_POS163		: STRING := 'FG Basket A POS 163';
	ACTION_FGA_POS164		: STRING := 'FG Basket A POS 164';
	ACTION_FGA_POS165		: STRING := 'FG Basket A POS 165';
	ACTION_FGA_POS166		: STRING := 'FG Basket A POS 166';
	ACTION_FGA_POS167		: STRING := 'FG Basket A POS 167';
	ACTION_FGA_POS168		: STRING := 'FG Basket A POS 168';
	ACTION_FGA_POS169		: STRING := 'FG Basket A POS 169';
	ACTION_FGA_POS170		: STRING := 'FG Basket A POS 170';
	ACTION_FGA_POS171		: STRING := 'FG Basket A POS 171';
	ACTION_FGA_POS172		: STRING := 'FG Basket A POS 172';
	ACTION_FGA_POS173		: STRING := 'FG Basket A POS 173';
	ACTION_FGA_POS174		: STRING := 'FG Basket A POS 174';
	ACTION_FGA_POS175		: STRING := 'FG Basket A POS 175';
	ACTION_FGA_POS176		: STRING := 'FG Basket A POS 176';
	ACTION_FGA_POS177		: STRING := 'FG Basket A POS 177';
	ACTION_FGA_POS178		: STRING := 'FG Basket A POS 178';
	ACTION_FGA_POS179		: STRING := 'FG Basket A POS 179';
	ACTION_FGA_POS180		: STRING := 'FG Basket A POS 180';
	ACTION_FGA_POS181		: STRING := 'FG Basket A POS 181';
	ACTION_FGA_POS182		: STRING := 'FG Basket A POS 182';
	ACTION_FGA_POS183		: STRING := 'FG Basket A POS 183';
	ACTION_FGA_POS184		: STRING := 'FG Basket A POS 184';
	ACTION_FGA_POS185		: STRING := 'FG Basket A POS 185';
	ACTION_FGA_POS186		: STRING := 'FG Basket A POS 186';
	ACTION_FGA_POS187		: STRING := 'FG Basket A POS 187';
	ACTION_FGA_POS188		: STRING := 'FG Basket A POS 188';
	ACTION_FGA_POS189		: STRING := 'FG Basket A POS 189';
	ACTION_FGA_POS190		: STRING := 'FG Basket A POS 190';
	ACTION_FGA_POS191		: STRING := 'FG Basket A POS 191';
	ACTION_FGA_POS192		: STRING := 'FG Basket A POS 192';
	ACTION_FGA_POS193		: STRING := 'FG Basket A POS 193';
	ACTION_FGA_POS194		: STRING := 'FG Basket A POS 194';
	ACTION_FGA_POS195		: STRING := 'FG Basket A POS 195';
	ACTION_FGA_POS196		: STRING := 'FG Basket A POS 196';
	ACTION_FGA_POS197		: STRING := 'FG Basket A POS 197';
	ACTION_FGA_POS198		: STRING := 'FG Basket A POS 198';
	ACTION_FGA_POS199		: STRING := 'FG Basket A POS 199';
	ACTION_FGA_POS200		: STRING := 'FG Basket A POS 200';
	ACTION_FGA_POS			: STRING := 'FG Basket A Pack';
	ACTION_FG_PACK			: STRING := 'FG Packing';
	ACTION_VB_TO_JIGC		: STRING := 'VB to JIG C';
	ACTION_JIGC_PICK		: STRING := 'JIG C Pick';
	ACTION_PLACE_TO_CR1		: STRING := 'Place to CR01';
	ACTION_PLACE_TO_CR2		: STRING := 'Place to CR02';
	ACTION_PLACE_TO_CR3		: STRING := 'Place to CR03';
	ACTION_PLACE_TO_CR4		: STRING := 'Place to CR04';
	ACTION_PLACE_TO_CR5		: STRING := 'Place to CR05';
	ACTION_PLACE_TO_CR6		: STRING := 'Place to CR06';
	ACTION_PLACE_TO_CR7		: STRING := 'Place to CR07';
	ACTION_PLACE_TO_CR8		: STRING := 'Place to CR08';
	ACTION_PLACE_TO_CR9		: STRING := 'Place to CR09';
	ACTION_PLACE_TO_CR10	: STRING := 'Place to CR10';
	ACTION_PLACE_TO_CR11	: STRING := 'Place to CR11';
	ACTION_PLACE_TO_CR12	: STRING := 'Place to CR12';
	ACTION_PLACE_TO_CR13	: STRING := 'Place to CR13';
	ACTION_PLACE_TO_CR14	: STRING := 'Place to CR14';
	ACTION_PLACE_TO_CR15	: STRING := 'Place to CR15';
	ACTION_PLACE_TO_CR16	: STRING := 'Place to CR16';
	ACTION_PLACE_TO_CR17	: STRING := 'Place to CR17';
	ACTION_PLACE_TO_CR18	: STRING := 'Place to CR18';
	ACTION_PLACE_TO_CR19	: STRING := 'Place to CR19';
	ACTION_PLACE_TO_CR20	: STRING := 'Place to CR20';
	ACTION_PLACE_TO_CR21	: STRING := 'Place to CR21';
	ACTION_PLACE_TO_CR		: STRING := 'Place to CR';
	ACTION_CR_TO_COSMO		: STRING := 'CR to COSMO';
	ACTION_CR_PICK			: STRING := 'CR Pick';
	ACTION_CR1_PICK			: STRING := 'CR01 Pick';
	ACTION_CR2_PICK			: STRING := 'CR02 Pick';
	ACTION_CR3_PICK			: STRING := 'CR03 Pick';
	ACTION_CR4_PICK			: STRING := 'CR04 Pick';
	ACTION_CR5_PICK			: STRING := 'CR05 Pick';
	ACTION_CR6_PICK			: STRING := 'CR06 Pick';
	ACTION_CR7_PICK			: STRING := 'CR07 Pick';
	ACTION_CR8_PICK			: STRING := 'CR08 Pick';
	ACTION_CR9_PICK			: STRING := 'CR09 Pick';
	ACTION_CR10_PICK		: STRING := 'CR10 Pick';
	ACTION_CR11_PICK		: STRING := 'CR11 Pick';
	ACTION_CR12_PICK		: STRING := 'CR12 Pick';
	ACTION_CR13_PICK		: STRING := 'CR13 Pick';
	ACTION_CR14_PICK		: STRING := 'CR14 Pick';
	ACTION_CR15_PICK		: STRING := 'CR15 Pick';
	ACTION_CR16_PICK		: STRING := 'CR16 Pick';
	ACTION_CR17_PICK		: STRING := 'CR17 Pick';
	ACTION_CR18_PICK		: STRING := 'CR18 Pick';
	ACTION_CR19_PICK		: STRING := 'CR19 Pick';
	ACTION_CR20_PICK		: STRING := 'CR20 Pick';
	ACTION_CR21_PICK		: STRING := 'CR21 Pick';
	ACTION_JIGA_WELDING		: STRING := 'JIG A Welding';
	ACTION_JIGB_WELDING		: STRING := 'JIG B Welding';
	ACTION_JIGC_WELDING		: STRING := 'JIG C Welding';
	ACTION_TORCH_CLEAN		: STRING := 'Torch Clean';	
	ACTION_JIGA_PLACE		: STRING := 'Place to JIG A';
	ACTION_JIGA_TO_JIGB		: STRING := 'JIG A to JIG B';
	ACTION_JIGB_TO_TT		: STRING := 'JIG B to TwinTorch';
	ACTION_TT_TO_JIGC		: STRING := 'TwinTorch to JIG C';
	ACTION_IF_A5			: STRING := 'Pick Infeed Rack A5';
	ACTION_IF_A4			: STRING := 'Pick Infeed Rack A4';
	ACTION_IF_A3			: STRING := 'Pick Infeed Rack A3';
	ACTION_IF_A2			: STRING := 'Pick Infeed Rack A2';
	ACTION_IF_A1			: STRING := 'Pick Infeed Rack A1';
	ACTION_IF_B5			: STRING := 'Pick Infeed Rack B5';
	ACTION_IF_B4			: STRING := 'Pick Infeed Rack B4';
	ACTION_IF_B3			: STRING := 'Pick Infeed Rack B3';
	ACTION_IF_B2			: STRING := 'Pick Infeed Rack B2';
	ACTION_IF_B1			: STRING := 'Pick Infeed Rack B1';
	ACTION_INIT				: STRING := 'Initiate';
	ACTION_JIGA_CLAMP		: STRING := 'JIG A Clamp';
	ACTION_JIGA_RELEASE		: STRING := 'JIG A Release';
	ACTION_JIGA_COMPLETE	: STRING := 'JIG A Complete';
	ACTION_JIGB_CLAMP		: STRING := 'JIG B Clamp';
	ACTION_JIGB_RELEASE		: STRING := 'JIG B Release';
	ACTION_JIGB_COMPLETE	: STRING := 'JIG B Complete';
	ACTION_JIGC_CLAMP		: STRING := 'JIG C Clamp';
	ACTION_JIGC_RELEASE		: STRING := 'JIG C Release';
	ACTION_JIGC_COMPLETE	: STRING := 'JIG C Complete';
	ACTION_TT_RUN			: STRING := 'TwinTorch Run';
	ACTION_IF_TO_CR			: STRING := 'Infeed Rack to Cooling Rack';
	ACTION_LYRPD_INIT		: STRING := 'Init Layer Pad';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>